--- a/templates/pages/index.rhtml
+++ b/templates/pages/index.rhtml
@@ -1,20 +1,28 @@
-<section id="articles">
-  <% for article in articles[0...3] %>
-    <article class="post">
-      <header>
-        <h1><a href="<%= article.path %>"><%= article.title %></a></h1>
-        <span class="date"><%= article.date %></span>
-      </header>
+<% n = articles.length
 
-      <section class="content">
-        <%= article.summary %>
-      </section>
-      <div class="more"><a href="<%= article.path %>">read on &raquo;</a></div>
-    </article>
-  <% end %>
-</section>
+if n > 0 then
+	articles[0...n].each_with_index do |currentArticle, i| %>
 
-<section id="archives">
-  <%= archives[3..-1] %>
-</section>
-
+<div class="post">
+	<article>
+		<header>
+			<h1><%= currentArticle.title %></h1>
+			<span class="author"><%= currentArticle.author %></span>
+			<span class="date"><%= currentArticle.date %></span>
+		</header>
+		<section class="body">
+			<%= currentArticle.body %>
+		</section>
+		<footer style="display: none;">
+			<% if i < n-1 then %>
+			<div class="prev">
+				<a href="<%= archives[i+1].url %>">&raquo; Previous: <%= archives[i+1].title %></a>
+			</div>
+			<% end %>
+		</footer>
+	</article>
+</div>
+<%	end
+else %>
+<div class="post"><h1>No Articles, sorry :(</h1></div>
+<% end %>
