--- a/styles/limitless/main.less
+++ b/styles/limitless/main.less
@@ -56,6 +56,7 @@
 @media screen and (min-width: 960px) {
 	#panel {
 		position: fixed;
+		z-index: 20;
 		left: 0;
 		top: 0;
 		width: 330px;
@@ -183,8 +184,9 @@
 
 @media screen and (max-width: 579px) {
 	#panel {
-		header p, footer {
+		header p {
 			text-align: center;
+			margin-top: 24px !important;
 		}
 
 		nav ul li {
@@ -195,6 +197,7 @@
 		footer {
 			font-size: 16px;
 			margin-bottom: 16px;
+			text-align: center;
 		}
 	}
 
@@ -226,11 +229,13 @@
 		padding: 24px;
 		border-top: 1px solid @borderGrey;
 
-		header h1 {
-			font-size: 24px;
-		}
-		header .author, header .date {
-			font-size: 12px;
+		header {
+			h1 {
+				font-size: 24px;
+			}
+			.author, .date {
+				font-size: 12px;
+			}
 		}
 		.body {
 			font-size: 16px;
@@ -247,10 +252,30 @@
 		min-height: 100%;
 		.sansLight;
 		font-size: 16px;
-		-webkit-font-smoothing: antialiased;
-		// -webkit-text-stroke: 0.35px;
 		text-rendering: optimizeLegibility;
 		min-width: 320px;
+	}
+
+	#fadetop, #fadebottom {
+		position: fixed;
+		width: 100%;
+		height: 32px;
+		left: 0;
+		z-index: 10;
+	}
+	#fadetop {
+		top: 0;
+		background-image: -webkit-linear-gradient(top, @lightGrey, fade(@lightGrey, 0%));
+		background-image: -moz-linear-gradient(top, @lightGrey, fade(@lightGrey, 0%));
+		background-image: -ms-linear-gradient(top, @lightGrey, fade(@lightGrey, 0%));
+		background-image: linear-gradient(top, @lightGrey, fade(@lightGrey, 0%));
+	}
+	#fadebottom {
+		bottom: 0;
+		background-image: -webkit-linear-gradient(bottom, @lightGrey, fade(@lightGrey, 0%));
+		background-image: -moz-linear-gradient(bottom, @lightGrey, fade(@lightGrey, 0%));
+		background-image: -ms-linear-gradient(bottom, @lightGrey, fade(@lightGrey, 0%));
+		background-image: linear-gradient(bottom, @lightGrey, fade(@lightGrey, 0%));
 	}
 
 	a {
