centered large layout

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,11 +29,12 @@
   font-family: 'FreeSerif', 'Baskerville', 'Book Antiqua', georgia, serif;
 }
 @media screen and (min-width: 960px) {
+  #site {
+    width: 960px;
+  }
   #panel {
     position: fixed;
     z-index: 20;
-    left: 0;
-    top: 0;
     width: 330px;
     height: 100%;
     border-right: 1px solid #cccccc;
@@ -190,6 +191,9 @@
     font-size: 16px;
     text-rendering: optimizeLegibility;
     min-width: 320px;
+  }
+  #site {
+    margin: 0 auto;
   }
   #fadetop,
   #fadebottom {
@@ -355,7 +359,7 @@
     padding: 24px;
   }
   .post header h1 {
-    letter-spacing: -1px;
+    letter-spacing: -1.5px;
     font-family: 'RobotoBold', 'Open Sans', 'Lucida Grande', Helvetica, Arial, sans-serif;
     font-weight: 700;
     /*background-color: @blue;
