--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -13,6 +13,7 @@
 		<!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,800,400,400italic' rel='stylesheet' type='text/css'>-->
 	</head>
 	<body>
+		<div id="site">
 		<div id="panel">
 			<header>
 				<h1 id="logo"><a href="/"><span class="open"><img src="/img/brace-top.png" height="70" width="266" /></span><span class="logotype"><span class="top"><%= @config[:title].split(' ')[0] %></span> <span class="bottom"><%= @config[:title].split(' ')[1] %></span></span><span class="close"><img src="/img/brace-bottom.png" height="70" width="266" /></span></a></h1>
@@ -34,5 +35,6 @@
 		</div>
 		<div id="fadetop"></div>
 		<div id="fadebottom"></div>
+	</div>
 	</body>
 </html>
