--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,155 +28,6 @@
 .serif {
   font-family: 'FreeSerif', 'Baskerville', 'Book Antiqua', georgia, serif;
 }
-@media screen and (min-width: 960px) {
-  #site {
-    width: 960px;
-  }
-  #panel {
-    position: fixed;
-    z-index: 20;
-    width: 330px;
-    height: 100%;
-    border-right: 1px solid #cccccc;
-    border-bottom: none;
-    background: #eeeef8;
-  }
-  #panel header p,
-  #panel footer {
-    text-align: center !important;
-  }
-  #panel nav ul {
-    text-align: center !important;
-  }
-  #panel nav ul li {
-    display: display: block !important;
-  }
-  #container {
-    margin-left: 331px;
-  }
-  #container .pagetitle {
-    max-width: 500px;
-  }
-  #container .pagebody {
-    max-width: 500px;
-  }
-  .post {
-    padding: 64px;
-  }
-  .post:first-child {
-    border-top: none !important;
-  }
-  .post article {
-    max-width: 500px;
-  }
-  .post .body p {
-    font-size: 20px !important;
-  }
-}
-@media screen and (min-width: 580px) {
-  #panel header {
-    padding: 4px 32px !important;
-    margin-bottom: 16px;
-  }
-  #panel header h1 a {
-    margin: 0 32px 16px 0 !important;
-    float: left;
-  }
-  #panel header p {
-    margin-top: 64px !important;
-    font-size: 24px;
-    text-align: left;
-  }
-  #panel nav ul {
-    text-align: left;
-  }
-  #panel nav ul li {
-    display: inline-block;
-    margin-right: 16px;
-  }
-  #panel footer {
-    margin-bottom: 20px;
-    text-align: left;
-  }
-  #container .pagetitle {
-    border-top: 1px solid #cccccc;
-    font-size: 128px;
-    padding-left: 32px;
-    margin-bottom: -16px;
-    clear: both;
-  }
-  #container .pagebody {
-    padding: 32px;
-  }
-  #container .pagebody ul {
-    font-size: 20px;
-    padding: 0 0 0 32px;
-  }
-  #container .pagebody .date {
-    font-size: 16px;
-  }
-  .post {
-    clear: both;
-    padding: 32px;
-    border-top: 1px solid #cccccc;
-  }
-  .post header h1 {
-    font-size: 32px;
-  }
-  .post header .author,
-  .post header .date {
-    font-size: 16px;
-  }
-  .post .body {
-    font-size: 20px;
-  }
-}
-@media screen and (max-width: 579px) {
-  #panel header p {
-    text-align: center;
-    margin-top: 24px !important;
-  }
-  #panel nav ul li {
-    display: inline-block;
-    margin: 0 8px;
-  }
-  #panel footer {
-    font-size: 16px;
-    margin-bottom: 16px;
-    text-align: center;
-  }
-  #container .pagetitle {
-    border-top: 1px solid #cccccc;
-    font-size: 96px;
-    padding-left: 24px;
-    margin-bottom: -12px;
-    clear: both;
-  }
-  #container .pagebody {
-    padding: 24px;
-  }
-  #container .pagebody ul {
-    font-size: 16px;
-    padding: 0 0 0 24px;
-  }
-  #container .pagebody .date {
-    font-size: 12px;
-  }
-  .post {
-    padding: 24px;
-    border-top: 1px solid #cccccc;
-  }
-  .post header h1 {
-    font-size: 24px;
-  }
-  .post header .author,
-  .post header .date {
-    font-size: 12px;
-  }
-  .post .body {
-    font-size: 16px;
-  }
-}
 @media screen {
   html {
     min-height: 100%;
@@ -362,19 +213,11 @@
     letter-spacing: -1.5px;
     font-family: 'RobotoBold', 'Open Sans', 'Lucida Grande', Helvetica, Arial, sans-serif;
     font-weight: 700;
-    /*background-color: @blue;
-  				color: #eeeeee;
-  				padding: 12px 16px;
-  				margin-left: -24px;
-  				margin-right: -24px;*/
-  
   }
   .post header .author {
     font-family: 'RobotoBold', 'Open Sans', 'Lucida Grande', Helvetica, Arial, sans-serif;
     font-weight: 700;
     text-transform: uppercase;
-    float: left;
-    display: block;
     color: #666666;
   }
   .post header .author:before {
@@ -386,29 +229,163 @@
   .post header .date {
     font-family: 'RobotoLight', 'Open Sans', 'Lucida Grande', Helvetica, Arial, sans-serif;
     font-weight: 300;
-    text-align: right;
-    display: block;
-    /*text-transform: uppercase;*/
-  
     color: #666666;
   }
-  .post .body {
-    /*p:first-child:first-letter {
-  				font-size: 2.6em;
-  				line-height: 1;
-  				margin-right: 8px;
-  				margin-top: 10px;
-  				font-weight: 800;
-  				float: left;
-  			}*/
-  
+  .post header .date:before {
+    content: ' on ';
+    font-family: 'RobotoLight', 'Open Sans', 'Lucida Grande', Helvetica, Arial, sans-serif;
+    font-weight: 300;
+    text-transform: lowercase;
   }
   .post .body p {
-    /*text-align: justify;*/
-  
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto;
+  }
+}
+@media screen and (max-width: 579px) {
+  #panel header p {
+    text-align: center;
+    margin-top: 24px;
+  }
+  #panel nav ul li {
+    display: inline-block;
+    margin: 0 8px;
+  }
+  #panel footer {
+    font-size: 16px;
+    margin-bottom: 16px;
+    text-align: center;
+  }
+  #container .pagetitle {
+    border-top: 1px solid #cccccc;
+    font-size: 80px;
+    padding-left: 24px;
+    padding-top: 32px;
+    margin-bottom: -12px;
+    clear: both;
+  }
+  #container .pagebody {
+    padding: 24px;
+  }
+  #container .pagebody ul {
+    font-size: 16px;
+    padding: 0 0 0 24px;
+    margin: 0;
+  }
+  #container .pagebody .date {
+    font-size: 12px;
+  }
+  .post {
+    padding: 24px;
+    border-top: 1px solid #cccccc;
+  }
+  .post header h1 {
+    font-size: 24px;
+  }
+  .post header .author,
+  .post header .date {
+    font-size: 12px;
+  }
+  .post .body {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 580px) {
+  #panel header {
+    padding: 4px 32px;
+    margin-bottom: 16px;
+  }
+  #panel header h1 a {
+    margin: 0 32px 16px 0;
+    float: left;
+  }
+  #panel header p {
+    margin-top: 64px;
+    font-size: 24px;
+    text-align: left;
+  }
+  #panel nav ul {
+    text-align: left;
+  }
+  #panel nav ul li {
+    display: inline-block;
+    margin-right: 16px;
+  }
+  #panel footer {
+    margin-bottom: 20px;
+    text-align: left;
+  }
+  #container .pagetitle {
+    border-top: 1px solid #cccccc;
+    font-size: 128px;
+    padding-left: 32px;
+    margin-bottom: -16px;
+    clear: both;
+  }
+  #container .pagebody {
+    padding: 32px;
+  }
+  #container .pagebody ul {
+    font-size: 20px;
+    padding: 0 0 0 32px;
+  }
+  #container .pagebody .date {
+    font-size: 16px;
+  }
+  .post {
+    clear: both;
+    padding: 32px;
+    border-top: 1px solid #cccccc;
+  }
+  .post header h1 {
+    font-size: 32px;
+  }
+  .post header .author,
+  .post header .date {
+    font-size: 16px;
+  }
+  .post .body {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 960px) {
+  #site {
+    max-width: 960px;
+  }
+  #panel {
+    position: fixed;
+    z-index: 20;
+    width: 330px;
+    height: 100%;
+    border-right: 1px solid #cccccc;
+    border-bottom: none;
+    background: #eeeef8;
+  }
+  #panel header p,
+  #panel footer {
+    text-align: center;
+  }
+  #panel nav ul {
+    text-align: center;
+  }
+  #panel nav ul li {
+    display: display: block;
+  }
+  #container {
+    margin-left: 331px;
+  }
+  .post {
+    padding: 48px;
+  }
+  .post:first-child {
+    border-top: none;
+  }
+  .post article header h1 {
+    margin-top: 0;
+  }
+  .post .body p {
+    font-size: 20px;
   }
 }
