added image support, comments, and a new post

--- a/styles/limitless/main.less
+++ b/styles/limitless/main.less
@@ -295,6 +295,10 @@
 				-ms-hyphens: auto;
 				hyphens: auto;
 			}
+			img {
+				display: block;
+				margin: 0 auto;
+			}
 		}
 	}
 }
@@ -363,6 +367,10 @@
 		}
 		.body {
 			font-size: 16px;
+
+			img {
+				max-width: 100%;
+			}
 		}
 	}
 }
@@ -441,7 +449,11 @@
 			font-size: 16px;
 		}
 		.body {
-			font-size: 20px;
+			font-size: 16px;
+
+			img {
+				max-width: 480px;
+			}
 		}
 	}
 }
@@ -492,9 +504,8 @@
 		article header h1 {
 			margin-top: 0;
 		}
-
-		.body p {
-			font-size: 20px;
+		img {
+			max-width: 500px;
 		}
 	}
 }
