--- a/public/css/main.css
+++ b/public/css/main.css
@@ -240,6 +240,10 @@
     -ms-hyphens: auto;
     hyphens: auto;
   }
+  .post .body img {
+    display: block;
+    margin: 0 auto;
+  }
 }
 @media screen and (max-width: 639px) {
   #panel header p {
@@ -287,6 +291,9 @@
   }
   .post .body {
     font-size: 16px;
+  }
+  .post .body img {
+    max-width: 100%;
   }
 }
 @media screen and (min-width: 640px) {
@@ -344,7 +351,10 @@
     font-size: 16px;
   }
   .post .body {
-    font-size: 20px;
+    font-size: 16px;
+  }
+  .post .body img {
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 960px) {
@@ -382,7 +392,7 @@
   .post article header h1 {
     margin-top: 0;
   }
-  .post .body p {
-    font-size: 20px;
+  .post img {
+    max-width: 500px;
   }
 }
