removed old style, added gzip compression

--- a/templates/pages/about.rhtml
+++ b/templates/pages/about.rhtml
@@ -3,8 +3,8 @@
 	<p>This blog is the documentation of an independent study project done for a senior-level English course at Westwood High School in Austin, Texas.</p>
 	<dl>
 		<dt>en&middot;ig&middot;mat&middot;ic</dt>
-		<dd data-word-class="adjective">Difficult to interpret or understand; mysterious.</dd>
+		<dd data-word-class="adjective">difficult to interpret or understand; mysterious.</dd>
 		<dt>cryp&middot;tog&middot;ra&middot;phy</dt>
-		<dd data-word-class="noun">The process or skill of communicating in or deciphering secret writings or ciphers.</dd>
+		<dd data-word-class="noun">the process or skill of communicating in or deciphering secret writings or ciphers.</dd>
 	</dl>
 </div>
