--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title><%= title %></title>
-		<meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
+		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" name="viewport" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon-precomposed" href="/img/icon_266.png" />
